added test for get file by path

--- a/html/index.html
+++ b/html/index.html
@@ -16,5 +16,7 @@
     </table>
 
     <p>This is the sample page for the Seagull web framework.</p>
+    <img src="images/swift.jpg">
+    
   </body>
 </html>
